<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Game.LevelActivity">

    <Button
        android:id="@+id/choose_level"
        android:layout_width="287dp"
        android:layout_height="109dp"
        android:background="@drawable/purpleborder"
        android:backgroundTint="#A46EAE"
        android:backgroundTintMode="src_atop"
        android:text="@string/choose_level"
        android:textAlignment="center"
        android:textColor="#261529"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#BC936393"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#998CB5"
        android:text="@string/back"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"

        android:background="@drawable/board"
        android:columnCount="1"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/easy_button"
            android:layout_width="248dp"
            android:layout_height="83dp"
            android:background="#00CEC7DF"
            android:backgroundTint="#00623DB3"
            android:text="@string/easy_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="353dp" />

        <Button
            android:id="@+id/medium_button"
            android:layout_width="248dp"
            android:layout_height="83dp"
            android:background="#2A716983"
            android:text="@string/medium_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="10dp"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="270dp" />

        <Button
            android:id="@+id/hard_button"
            android:layout_width="248dp"
            android:layout_height="83dp"
            android:background="#00FFFFFF"
            android:text="@string/hard_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="15dp"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="436dp" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>